fix: text overflowing on small screen

--- a/src/pages/Shop/Product/Product.scss
+++ b/src/pages/Shop/Product/Product.scss
@@ -46,6 +46,7 @@
 
       .desc {
         font-weight: 300;
+        overflow-wrap: anywhere;
       }
     }
 
